Fix course cards being off center to the left

--- a/ClientApp/src/app/user-dashboard/course-summary-card/course-summary-card.component.css
+++ b/ClientApp/src/app/user-dashboard/course-summary-card/course-summary-card.component.css
@@ -1,6 +1,8 @@
 .course-summary{
     background-color: lightgrey;
     color: black;
+    width: 90%;
+    margin-left: 10px;
 }
 
 .menu-btn{
